stopping overflow

--- a/app/styles/_content.scss
+++ b/app/styles/_content.scss
@@ -1,9 +1,12 @@
 .section{
 	min-height: 900px !important;
 	&.section1{
+		min-height: 900px !important;
 		.content{
+			min-height: 750px !important;
 			position: fixed;
 			height: 100%;
+			min-height: 950px;
 			width:100%;
 			top:0;
 			left: 0;
