--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -3,7 +3,7 @@ footer{
     margin-left: -550px;
     max-width: 1100px;
     display: block;
-	position: fixed;
+	position: absolute;
 	bottom: 1%;
 	width: 100%;
 	padding-left: 40px;
@@ -125,6 +125,7 @@ footer{
 
 @media screen and (min-width: 1550px){
 	footer{
+		position: relative;
 		left: 50%;
 	    margin-left: -650px;
 	    max-width: 1300px;
