--- a/app/styles/_slider.scss
+++ b/app/styles/_slider.scss
@@ -12,6 +12,7 @@
 
 
 #fullpage{
+    min-height: 900px;
     .swiper-container{
         .swiper-wrapper{
               .page {
